      (Martin Pool)

  INTERNALS:

    * New ``assertLength`` method based on one Martin has squirreled away
      somewhere. (Robert Collins, Martin Pool)

    * New repository method ``refresh_data`` to cause any repository to
      make visible data inserted into the repository by a smart server
      fetch operation. (Robert Collins, Andrew Bennetts)

    * Removed ``InterRemoteToOther`` and ``InterOtherToRemote`` classes,
      as they are now unnecessary.  (Andrew Bennetts)
      
    * ``_walk_to_common_revisions`` will now batch up at least 50
      revisions before calling ``get_parent_map`` on the target,
      regardless of ``InterRepository``.
      (Andrew Bennetts, Robert Collins)


bzr 1.13rc1 "paraskavedekatriaphobia" 2009-03-10
------------------------------------------------
This release includes bug fixes and a few performance and feature improvements.
GNU Changelog output can now be produced by ``bzr log --format gnu-changelog``.
Debug flags can now be set in ``~/.bazaar/bazaar.conf``. Lightweight Checkouts
and Stacked Branches should both be much faster over remote connections.

  COMPATIBILITY BREAKS:

    * ``bzr log --line`` now indicates which revisions are merges with
      `[merge]` after the date.  Scripts which parse the output of this
      command may need to be adjusted.
      (Neil Martinsen-Burrell)

  NEW FEATURES:

    * ``bzr reconfigure`` now supports --with-trees and --with-no-trees
      options to change the default tree-creation policy of shared
      repositories.  (Matthew Fuller, Marius Kruger, #145033)

    * Debug flags can now be set in ``~/.bazaar/bazaar.conf``.
      (Martin Pool)

    * Filtered views provide a mask over the tree so that users can focus
      on a subset of a tree when doing their work. See ``Filtered views``
      in chapter 7 of the User Guide and ``bzr help view`` for details.
      (Ian Clatworthy)

    * GNU Changelog output can now be produced by ``bzr log --format